feat: update package.json for vibegit configuration
- Added `helpClass` path to specify the help class location.
- Set default topic to `help` for improved user guidance.

--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
       "@oclif/plugin-help",
       "@oclif/plugin-plugins"
     ],
+    "helpClass": "./src/help",
     "topicSeparator": " ",
     "topics": {
       "hello": {
         "description": "Say hello to the world and others"
       }
-    }
+    },
+    "default": "help"
   },
   "repository": "pushpak1300/vibegit",
   "scripts": {
