--- a/.github/workflows/onRelease.yml
+++ b/.github/workflows/onRelease.yml
@@ -12,10 +12,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: latest
-      - run: npm install
-      - run: npm run build
-      - run: npm run prepack
+      - uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
+      - run: bun install
+      - run: bun run build
+      - run: bun run prepack
       - uses: JS-DevTools/npm-publish@19c28f1ef146469e409470805ea4279d47c3d35c
         with:
           token: ${{ secrets.NPM_TOKEN }}
-      - run: npm run postpack
+      - run: bun run postpack
