--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "@oclif/core": "^4",
     "@oclif/plugin-help": "^6",
     "@oclif/plugin-plugins": "^5",
-    "ora": "^8.2.0"
+    "ora": "^8.2.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.1"
   },
   "devDependencies": {
     "@eslint/compat": "^1",
@@ -20,6 +24,9 @@
     "@types/chai": "^4",
     "@types/mocha": "^10",
     "@types/node": "^18",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/body-parser": "^1.19.5",
     "chai": "^4",
     "eslint": "^9",
     "eslint-config-oclif": "^6",
@@ -53,7 +60,7 @@
       "@oclif/plugin-help",
       "@oclif/plugin-plugins"
     ],
-    "helpClass": "./src/help",
+    "helpClass": "./dist/help",
     "topicSeparator": " ",
     "topics": {
       "hello": {
