fix: update build step in GitHub workflow
- Added `bun run build` to the onPushToMain workflow to ensure the project is built before generating the README.

--- a/.github/workflows/onPushToMain.yml
+++ b/.github/workflows/onPushToMain.yml
@@ -42,6 +42,7 @@ jobs:
         id: oclif-readme
         run: |
           bun install
+          bun run build
           bunx oclif readme
           if [ -n "$(git status --porcelain)" ]; then
             git add .
