--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
   "dependencies": {
     "@oclif/core": "^4",
     "@oclif/plugin-help": "^6",
+    "@oclif/plugin-not-found": "^3.2.49",
     "@oclif/plugin-plugins": "^5",
-    "ora": "^8.2.0",
-    "express": "^4.18.2",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "express": "^4.21.2",
+    "ora": "^8.2.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1",
     "@oclif/prettier-config": "^0.2.1",
     "@oclif/test": "^4",
+    "@types/body-parser": "^1.19.5",
     "@types/chai": "^4",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/mocha": "^10",
     "@types/node": "^18",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/body-parser": "^1.19.5",
     "chai": "^4",
     "eslint": "^9",
     "eslint-config-oclif": "^6",
@@ -58,7 +59,7 @@
     "commands": "./dist/commands",
     "plugins": [
       "@oclif/plugin-help",
-      "@oclif/plugin-plugins"
+      "@oclif/plugin-not-found"
     ],
     "helpClass": "./dist/help",
     "topicSeparator": " ",
