--- a/.github/workflows/onRelease.yml
+++ b/.github/workflows/onRelease.yml
@@ -18,7 +18,7 @@ jobs:
       - run: bun install
       - run: bun run build
       - run: bun run prepack
-      - uses: JS-DevTools/npm-publish@19c28f1ef146469e409470805ea4279d47c3d35c
+      - uses: JS-DevTools/npm-publish
         with:
           token: ${{ secrets.NPM_TOKEN }}
       - run: bun run postpack
